feature(applicant): added service layer

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
   <title>Icetec</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon"
+        href="https://s3.amazonaws.com/enlizt-resources-prod/companies/b8a3b2a0-2a9d-11eb-b7cb-d73237b09b0a_256_avatar?nocache=1605814246178">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
